# lemon-noise

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
app/: Cargo.toml  index.html
app/src/: app.rs  lib.rs  main.rs
app/src/ui/: mod.rs
app/src/ui/widgets/: mod.rs  mod_control.rs  node_card.rs  param_control.rs  waveform.rs
app/src/ui/windows/: export.rs  mod.rs
app/src/utils/: file_loader.rs  file_saver.rs  mod.rs  persistence.rs
core/: Cargo.toml
core/src/: audio.rs  context.rs  lib.rs  mixer.rs  modulation.rs  node.rs  param.rs  persistence.rs  pipeline.rs  project.rs  registry.rs  rng.rs  wav.rs
core/src/nodes/: bitcrush.rs  blue.rs  brown.rs  chorus.rs  clip.rs  comb.rs  compressor.rs  dc_blocker.rs  delay.rs  dust.rs  flanger.rs  gain.rs  gate.rs  high_pass.rs  low_pass.rs  mod.rs  oscillator.rs  pink.rs  pulse.rs  reverb.rs  ring_mod.rs  sample_hold.rs  saturate.rs  svf.rs  tremolo.rs  violet.rs  wavefolder.rs  white.rs
core/tests/: smoke.rs
docker/: .env.dist  Dockerfile  Dockerfile.dev  docker-compose.yml
server/: Cargo.toml
server/src/: config.rs
