[workspace]
resolver = "3"
members = ["app", "core", "server"]
default-members = ["core", "server"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
lemon-noise = { path = "core" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
