[package]
name = "lemon-noise"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
serde = ["dep:serde"]
persistence = ["serde", "dep:brotli", "dep:rmp-serde"]
audio = ["dep:cpal", "dep:thiserror"]

[dependencies]
brotli = { version = "8", optional = true }
cpal = { version = "0.18.1", optional = true }
rmp-serde = { version = "1", optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.18.1", optional = true, features = ["wasm-bindgen"] }
